bundle template added, completed more of the landing page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 .logo-links-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: flex-start;
     margin-bottom: 30px;
 }
 
@@ -10,7 +11,7 @@
 
 header {
     background-color: #233753;
-    padding: 20px;
+    padding-bottom: 20px;
 }
 
 button {
@@ -39,14 +40,63 @@ img.rounded {
 .Hero-Secondary-Text {
     font-size: 18px;
     color: #e5e7eb;
-}
-
-.Hero-Secondary-Text a {
-    font-size: 18px;
-    color: #e5e7eb;
-    margin: 8px;
+    padding: 5px;
+    margin: 5px;
+    padding-left: 0;
 }
 
 a {
     text-decoration: none;
+}
+
+
+.main-content-bundles {}
+
+.bundle-item {
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #3882F6;
+    margin: 15px;
+}
+
+.bundles {
+    display: flex;
+    justify-content: center;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+    height: auto;
+    background-color: #e5e7eb;
+    margin: 15px;
+    padding: 25px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1f2937;
+    max-width: 500px;
+}
+
+.bundle-title {
+    font-size: 28px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.credit {
+    font-weight: 900;
+    max-width: 500px;
+}
+
+.credit-container {
+    width: 500px;
+    text-align: right;
 }
