--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,13 @@
     margin-bottom: 30px;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
 .header-links {
     padding: 10px;
 }
@@ -49,6 +56,11 @@ a {
     text-decoration: none;
 }
 
+.Hero-Secondary-Text a:visited {
+    color: #e5e7eb;
+}
+
+
 
 .main-content-bundles {}
 
@@ -58,12 +70,13 @@ a {
     border-radius: 10px;
     border-style: solid;
     border-color: #3882F6;
-    margin: 15px;
 }
 
 .bundles {
     display: flex;
     justify-content: center;
+    gap: 30px;
+    margin: 25px;
 }
 
 .quote {
@@ -74,6 +87,7 @@ a {
     height: auto;
     background-color: #e5e7eb;
     margin: 15px;
+    padding-top: 50px;
     padding: 25px;
 }
 
@@ -99,4 +113,51 @@ a {
 .credit-container {
     width: 500px;
     text-align: right;
+}
+
+.call-to-action {
+    background-color: #3882F6;
+    max-width: 500px;
+    flex: 1;
+    height: 100px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.call-to-action-container {
+    display: flex;
+    padding: 40px;
+    justify-content: center;
+}
+
+.call-to-action-content-title {
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    margin: 5px;
+    margin-left: 0;
+}
+
+.call-to-action-content-small {
+    font-size: 10px;
+    color: white;
+    font-weight: 400;
+    margin: 0;
+}
+
+.call-to-action-button {
+    height: auto;
+    flex: 1;
+    max-width: 100px;
+    border-color: white;
+    color: white;
+}
+
+footer {
+    flex: 1;
+    background-color: #233753;
+    display: flex;
+    justify-content: center;
 }
